--- a/employee-service.properties
+++ b/employee-service.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 #
 server.port=8081
-
+spring.boot.message= hello,employee service!
 
 
 eureka.instance.client.serveUrl.defaultZone=http://localhost:8761/eureka/
